# FLife

./: Analyze_vibration_data_updated.ipynb  FLife Showcase.ipynb  Zaxis.rar
.github/workflows/: flife-lite-ci.yml
Xdir/: Xdir.rar
Ydir/: Ydir.rar
data/: Joint_Enclosure2_fatigue_results_with_validation.csv  Joint_Mounting_plate_fatigue_results.csv  ydir_fatigue_results.csv  ydir_fatigue_results_with_validation.csv
data/vibration_data/: Mounting_pad2.xlsx
flife-lite/: .gitignore  index.html  license-test-simple.sqlite3-journal  license-test.sqlite3-journal  package-lock.json  package.json  tsconfig.json  update-manifest.json  vite.config.ts
flife-lite/docs/: admin-guide.md  architecture.md  build-instructions.md  security-audit.md  setup.md  user-manual.md
flife-lite/docs/release/: admin-guide.md  installation-guide.md  known-limitations.md  licensing-guide.md  portable-guide.md  release-notes.md  troubleshooting.md  updater-guide.md
flife-lite/importers/: __init__.py  abaqus_csv.py  ansys_csv.py  base.py  nastran_punch.py
flife-lite/installer/: README.md  license.txt  nsis-hooks.nsh
flife-lite/python_engine/: requirements.txt
flife-lite/release/: RC1-validation-report.md  release-notes.md
flife-lite/scripts/: bootstrap-windows.ps1  bundle-report.mjs  doctor-windows.ps1  release-windows.ps1  sign-windows.ps1  static-check.mjs  validate-release.mjs
flife-lite/src-tauri/: Cargo.toml  tauri.conf.json
flife-lite/src-tauri/src/: main.rs
flife-lite/tests/: test_engine_api.py  test_license_crypto.py  test_project_reporting.py
(+35 files in other folders)
